--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -28,7 +28,6 @@
   justify-content: center;
 
   .branding {
-    margin-bottom: 24px;
 
     img {
       width: 64px;
@@ -109,3 +108,30 @@
     }
   }
 }
+.foto-circular {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 auto 16px auto;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  background-color: #f5f5f5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .icono-defecto {
+    font-size: 100px;
+    color: #ccc;
+  }
+}
+
+
+
+
