--- a/src/app/paneladmin/paneladmin.component.html
+++ b/src/app/paneladmin/paneladmin.component.html
@@ -1,10 +1,7 @@
 <ion-content class="background">
   <div class="top-icons">
     <button>
-      <ion-icon name="notifications-outline"></ion-icon>
-    </button>
-    <button>
-      <ion-icon name="person-circle-outline"></ion-icon>
+      <ion-icon name="person-circle-outline" [routerLink]="'/modificarperfil'"></ion-icon>
     </button>
   </div>
 
