--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -1,6 +1,6 @@
 .background {
   --background: transparent;
-  background: linear-gradient(to bottom, #ffffff, #ffb745);
+  background: linear-gradient(to bottom, #ffffff, #ffd38e);
   background-size: cover;
   background-position: center;
   height: 100%;
