Las ofertas guardadas

--- a/src/app/modificarperfil/modificarperfil.component.html
+++ b/src/app/modificarperfil/modificarperfil.component.html
@@ -1,12 +1,12 @@
 <ion-content class="background">
-  <div class="perfil-layout">
+  <div class="layout">
     <!-- Menú lateral -->
     <div class="menu-lateral">
-      <app-menuizquierdaperfil></app-menuizquierdaperfil>
+      <app-menuizquierdaconfig></app-menuizquierdaconfig>
     </div>
 
     <!-- Contenido de modificación -->
-    <div class="formulario-perfil">
+    <div class="formulario">
       <div class="branding">
         <h1>Editar Perfil</h1>
         <p>Modifica tus datos personales</p>
