--- a/src/app/menuizquierdaconfig/menuizquierdaconfig.component.html
+++ b/src/app/menuizquierdaconfig/menuizquierdaconfig.component.html
@@ -8,6 +8,10 @@
           <ion-icon name="person-outline" slot="start"></ion-icon>
           <ion-label>Perfil</ion-label>
         </ion-item>
+        <ion-item button [routerLink]="['/ofertasguardadas']" lines="none">
+          <ion-icon name="heart-outline" slot="start"></ion-icon>
+          <ion-label>Ofertas guardadas</ion-label>
+        </ion-item>
         <ion-item button [routerLink]="['/principal']" lines="none">
           <ion-icon name="time-outline" slot="start"></ion-icon>
           <ion-label>Historial</ion-label>
