--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -133,12 +133,12 @@
   transition: transform 0.2s ease-in-out;
 
   img {
-    width: 65%;
-    height: 160px;
-    object-fit: cover;
-    margin: 0 auto;
+    height: 180px;
+    object-fit: contain;
+    margin: 30px auto 0;
     display: block;
     border-radius: 8px;
+    background-color: #f5f5f5;
   }
 
 
