--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -153,6 +153,10 @@
     font-size: 1rem;
     font-weight: bold;
     color: #e67e22;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 220px; // antes 180px
   }
 }
 
@@ -220,11 +224,16 @@
   justify-content: center;
 }
 
-.empresa-titulo{
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: #4d4d4d;
-  margin-bottom: 8px;
-  margin-left: 25%;
+.empresa-titulo {
+  font-size: 2rem; /* Más grande */
+  font-weight: 800; /* Extra negrita */
+  color: #676767; /* Mismo color que usas en otros elementos clave */
+  margin: 40px 0 16px 27%;
+  text-transform: uppercase; /* Estilo profesional */
+  letter-spacing: 1px;
+  border-left: 6px solid #e67e22;
+  padding-left: 12px;
+  border-radius: 4px;
 }
+
 
