Mejora minima de los titulos de empresa (se sigue viendo horrible lol)

--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -225,11 +225,11 @@
 }
 
 .empresa-titulo {
-  font-size: 2rem; /* Más grande */
-  font-weight: 800; /* Extra negrita */
-  color: #676767; /* Mismo color que usas en otros elementos clave */
+  font-size: 2rem;
+  font-weight: 800;
+  color: #676767;
   margin: 40px 0 16px 27%;
-  text-transform: uppercase; /* Estilo profesional */
+  text-transform: uppercase;
   letter-spacing: 1px;
   border-left: 6px solid #e67e22;
   padding-left: 12px;
