--- a/src/app/ofertasguardadas/ofertasguardadas.component.scss
+++ b/src/app/ofertasguardadas/ofertasguardadas.component.scss
@@ -169,3 +169,20 @@
   opacity: 1;
 }
 
+.heart-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 5;
+  cursor: pointer;
+
+  ion-icon {
+    font-size: 30px;
+    color: #e67e22;
+    transition: transform 0.2s ease;
+  }
+
+  &:hover ion-icon {
+    transform: scale(1.15);
+  }
+}
