--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -229,7 +229,7 @@
   font-weight: 800;
   color: #676767;
   margin: 40px 0 16px 27%;
-  text-transform: uppercase;
+  font-family: 'Poppins', sans-serif;
   letter-spacing: 1px;
   border-left: 6px solid #e67e22;
   padding-left: 12px;
