--- a/src/app/menuizquierdaconfig/menuizquierdaconfig.component.html
+++ b/src/app/menuizquierdaconfig/menuizquierdaconfig.component.html
@@ -12,7 +12,7 @@
           <ion-icon name="heart-outline" slot="start"></ion-icon>
           <ion-label>Ofertas guardadas</ion-label>
         </ion-item>
-        <ion-item button [routerLink]="['/principal']" lines="none">
+        <ion-item button [routerLink]="['/historial']" lines="none">
           <ion-icon name="time-outline" slot="start"></ion-icon>
           <ion-label>Historial</ion-label>
         </ion-item>
