--- a/src/app/modificarperfil/modificarperfil.component.html
+++ b/src/app/modificarperfil/modificarperfil.component.html
@@ -55,12 +55,7 @@
       <ion-button expand="block" (click)="guardarCambios()" class="login-button">
         Guardar Cambios
       </ion-button>
-
-      <ion-text color="light">
-        <p class="registro-text">
-          <a (click)="volver()">Cancelar</a>
-        </p>
-      </ion-text>
+      <ion-button class="login-button">Restablecer</ion-button>
     </div>
   </div>
 </ion-content>
