--- a/src/app/ofertasguardadas/ofertasguardadas.component.html
+++ b/src/app/ofertasguardadas/ofertasguardadas.component.html
@@ -40,20 +40,11 @@
               </div>
               <div class="rating">⭐ {{ producto.rating }}</div>
               <div class="delivery">{{ producto.delivery }}</div>
-              <ion-button
-                expand="block"
-                fill="outline"
-                size="small"
-                [href]="producto.url"
-                target="_blank"
-                class="login-button"
-              >Ver más</ion-button>
+              <ion-button expand="block" fill="outline" size="small" [href]="producto.url" target="_blank" class="login-button">Ver más</ion-button>
             </ion-card-content>
           </ion-card>
         </ng-template>
       </swiper>
-
-
     </div>
   </div>
 </ion-content>
