--- a/src/app/menuizquierdaconfig/menuizquierdaconfig.component.html
+++ b/src/app/menuizquierdaconfig/menuizquierdaconfig.component.html
@@ -16,7 +16,7 @@
           <ion-icon name="time-outline" slot="start"></ion-icon>
           <ion-label>Historial</ion-label>
         </ion-item>
-        <ion-item button [routerLink]="['/configuracion']" lines="none">
+        <ion-item button [routerLink]="['/ajustes']" lines="none">
           <ion-icon name="settings-outline" slot="start"></ion-icon>
           <ion-label>Configuración</ion-label>
         </ion-item>
