--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap" rel="stylesheet">
 </head>
 
-<ion-content class="background">
+<ion-content [class.backgroundclaro]="modo" [class.backgroundoscuro]="!modo">
   <div class="top-icons">
     <button>
       <ion-icon name="notifications-outline"></ion-icon>
